--- a/style.css
+++ b/style.css
@@ -1321,10 +1321,18 @@ a {
   margin: 0;
   padding: 0;
   color: #DDD;
-  font-size: .8rem; }
+  font-size: .8rem;
+  white-space: nowrap;
+  max-width: 100%;
+  overflow-x: scroll; }
+  .archive .breadcrumbs {
+    max-width: 66%; }
   @media (min-width: 480px) {
     .breadcrumbs {
       font-size: 1rem; } }
+  @media (min-width: 640px) {
+    .breadcrumbs {
+      max-width: 80%; } }
   .breadcrumbs li {
     display: inline-block;
     margin-right: .5em;
@@ -1903,7 +1911,7 @@ a {
         margin-right: 2rem;
         width: 60vw;
         height: 33.75vw;
-        position: sticky;
+        position: fixed;
         top: 133px; } }
     .exercise-single-article .wp-block-video video, .exercise-single-article .wp-block-video iframe, .exercise-single-article .wp-block-embed video, .exercise-single-article .wp-block-embed iframe, .exercise-single-article .wp-block-embed__wrapper video, .exercise-single-article .wp-block-embed__wrapper iframe {
       display: block;
@@ -1918,8 +1926,11 @@ a {
   @media (min-width: 768px) {
     .exercise-single-article .post-info > :not(.wp-block-video) {
       margin-left: 66%; } }
-  .exercise-single-article .entry-footer {
-    margin-top: 1em; }
+  @media (min-width: 768px) {
+    .exercise-single-article .post-info > .entry-footer {
+      position: fixed;
+      margin-left: 0;
+      top: calc(133px + 33.75vw + 1rem); } }
   .exercise-single-article .entry-footer .exercises-tag {
     display: inline-block;
     background-color: #ffe8e0;
